# docs/swagger.json
@@ -8,7 +8,7 @@
     "host": "localhost:5000",
     "basePath": "/",
     "paths": {
-        "/api/": {
+        "/api/buildings": {
             "get": {
                 "security": [
                     {
@@ -32,7 +32,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handler.DataResponse"
+                                "$ref": "#/definitions/handler.dataResponse"
                             }
                         }
                     },
@@ -124,7 +124,7 @@
                 }
             }
         },
-        "/api/:id": {
+        "/api/buildings/:id": {
             "put": {
                 "security": [
                     {
@@ -278,7 +278,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handler.DataResponse"
+                                "$ref": "#/definitions/handler.dataResponse"
                             }
                         }
                     },
@@ -504,7 +504,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Авторизация"
                 ],
                 "summary": "SignIn",
                 "operationId": "login",
@@ -563,7 +563,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Авторизация"
                 ],
                 "summary": "SignUp",
                 "operationId": "create-account",
@@ -616,41 +616,122 @@
     "definitions": {
         "domain.Building": {
             "type": "object",
-            "required": [
-                "address",
-                "name",
-                "name_business_entity",
-                "phone"
-            ],
             "properties": {
-                "address": {
+                "availability_asu": {
+                    "type": "boolean"
+                },
+                "employee_count": {
+                    "type": "integer"
+                },
+                "form_owner_id": {
+                    "type": "integer"
+                },
+                "inn": {
                     "type": "string"
                 },
-                "name": {
+                "kpp": {
                     "type": "string"
                 },
-                "name_business_entity": {
+                "micro_district_name": {
                     "type": "string"
                 },
-                "phone": {
+                "name_building": {
                     "type": "string"
+                },
+                "name_full_building": {
+                    "type": "string"
+                },
+                "object_type": {
+                    "type": "boolean"
+                },
+                "opening_date": {
+                    "type": "string"
+                },
+                "region_id": {
+                    "type": "integer"
+                },
+                "retail_space": {
+                    "type": "integer"
+                },
+                "self_service": {
+                    "type": "boolean"
+                },
+                "street_name": {
+                    "type": "string"
+                },
+                "total_area": {
+                    "type": "integer"
+                },
+                "trading_network_id": {
+                    "type": "integer"
+                },
+                "type_object_id": {
+                    "type": "integer"
+                },
+                "work_place_count": {
+                    "type": "integer"
                 }
             }
         },
         "domain.BuildingUpdateInput": {
             "type": "object",
             "properties": {
-                "address": {
+                "availability_asu": {
+                    "type": "boolean"
+                },
+                "closing_date": {
                     "type": "string"
                 },
-                "name": {
+                "employee_count": {
+                    "type": "integer"
+                },
+                "form_owner_id": {
+                    "type": "integer"
+                },
+                "inn": {
                     "type": "string"
                 },
-                "name_business_entity": {
+                "kpp": {
                     "type": "string"
                 },
-                "phone": {
+                "micro_district_name": {
                     "type": "string"
+                },
+                "name_building": {
+                    "type": "string"
+                },
+                "name_full_building": {
+                    "type": "string"
+                },
+                "object_type": {
+                    "type": "boolean"
+                },
+                "opening_date": {
+                    "type": "integer"
+                },
+                "region_id": {
+                    "type": "integer"
+                },
+                "retail_space": {
+                    "type": "integer"
+                },
+                "self_service": {
+                    "type": "boolean"
+                },
+                "street_name": {
+                    "type": "string"
+                },
+                "total_area": {
+                    "type": "integer"
+                },
+                "trading_network_id": {
+                    "type": "integer"
+                },
+                "type_object_id": {
+                    "type": "integer"
+                },
+                "work_place_count": {
+                    "type": "integer"
                 }
             }
         },
@@ -726,19 +807,19 @@
                 }
             }
         },
-        "handler.DataResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "object"
-                }
-            }
-        },
         "handler.Error": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "handler.dataResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "object"
                 }
             }
         },
